# idris2-ipython-kernel

./: README.md  pyproject.toml
idris2kernel/: __main__.py  idris2kernel.py  kernel.json
