[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "idris2kernel"
author = "Alex Dekau"
author-email = "alex.potatofarms@gmail.com"
home-page = ""
requires = ["pexpect (>=4.0)"]
description-file = "README.rst"
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]

